[package]
name = "pixelbomber"
version = "1.1.1"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/fabi321/pixelbomber"
description = "Insanely fast pixelflut client for images and animations"
keywords = ["pixelflut", "pixelbomber"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rscam", "env_logger", "image/default", "clap", "sysinfo"]

[dependencies]
image = { version = "0.25", default-features = false }
rand = { version = "0.8", features = ["small_rng"] }
bufstream = "0.1"
clap = { version = "4", features = ["derive"], optional = true }
net2 = "0.2"
sysinfo = { version = "0.30", optional = true }
rscam = { version = "0.5", optional = true }
log = "0.4"
url = "2.2"
trust-dns-resolver = "0.20"
env_logger = { version = "0.11.6", optional = true }

[dev-dependencies]
lazy_static = "1.4"

[lib]
name = "pixelbomber"
path = "src/lib.rs"

[[bin]]
name = "pixelbomber"
path = "src/main.rs"
required-features = ["default"]

[[example]]
name = "bouncy_ball"
